feat: initial canvas engine

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,9 +11,8 @@
   <img id="cat" src="cat.jpg" width=224 height=224/>
   <canvas id="canvas" width=500 height=500></canvas>
 
+  <input type="file" id="files" name="uploadImg" accept="image/*"/>
+
+
 </body>
 <script src="index.js"></script>
-<script>
-
-
-</script>
