--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,22 +6,22 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.6.2/phaser.min.js"></script>
 
   <style>
-
-#renderArea {
-  width: 600px;
-  height: 600px;
-  position: relative;
-}
-#cat {
-  width: 90px;
-  height: 90px;
-  position: absolute;
-  top: 45%;
-  left: 45%;
-}
-#cat {
-  z-index: 10;
-}
+    #renderArea {
+      width: 600px;
+      height: 600px;
+      position: relative;
+    }
+    #cat {
+      width: 224px;
+      height: 224px;
+      position: absolute;
+      top: 190px;
+      left: 190px;
+      z-index: 10;
+      transform: scale(0.3, 0.3);
+      -ms-transform: scale(0.3, 0.3);
+      -webkit-transform: scale(0.3, 0.3);
+    }
   </style>
 </head>
 
