--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
       height: 600px;
       position: relative;
     }
-    #cat {
+    #img {
       width: 224px;
       height: 224px;
       position: absolute;
@@ -27,9 +27,9 @@
 
 
 <body>
-  <input type="file" id="files" name="uploadImg" accept="image/*"/>
+  <input type="file" id="file" name="uploadImg" accept="image/*"/>
   <div id="renderArea">
-    <img id="cat" src="cat.jpg" width=224 height=224/>
+    <img id="img" width=224 height=224/>
   </div>
   <canvas id="canvas" width=500 height=500></canvas>
 
