feat: dist built

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,6 +38,7 @@
       <img id="img" width=224 height=224/>
     </div>
     <div id="chart_div"></div>
+    <div id="description"/>
     <canvas id="helperCanvas" width=224 height=224 class="hidden"></canvas>
   </div>
 </body>
