fix: loading error

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,7 +38,7 @@
       </select>
     </div>
 
-    <h5>*CNN is running live in your browser</h5>
+    <h5>*ConvNet is running live in your browser</h5>
 
     <div id="renderArea">
       <img id="img" width=224 height=224/>
